--- a/.prettierrc
+++ b/.prettierrc
@@ -8,13 +8,13 @@
   "jsxBracketSameLine": false,
   "parser": "typescript",
   "trailingComma": "es5",
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": [
-    "<THIRD_PARTY_MODULES>",
-    "^@components/(.*)$",
-    "^[./]",
-    "^../(.*)",
-    "^./(.*)"
-  ],
+    "^react(.*)", 
+    "<THIRD_PARTY_MODULES>", 
+    "@/(.*)", 
+    "^@(.*)",
+    "^[./ ]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
