build: add stylelint and plugins

--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
+    "stylelint": "^15.10.2",
+    "stylelint-config-standard": "^34.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-stylelint": "^4.3.0",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "lint-staged": {
