--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
-  "arrowParent": "avoid",
-  "useTabs": false,
   "singleQuote": true,
-  "printWidth": 40,
+  "printWidth": 120,
   "tabWidth": 2,
   "semi": true,
   "jsxBracketSameLine": false,
@@ -10,11 +8,19 @@
   "trailingComma": "es5",
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": [
-    "^react(.*)", 
-    "<THIRD_PARTY_MODULES>", 
-    "@/(.*)", 
+    "^react(.*)",
+    "<THIRD_PARTY_MODULES>",
+    "@/(.*)",
     "^@(.*)",
     "^[./ ]"],
   "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSortSpecifiers": true,
+  "overrides": [
+    {
+      "files": "*.css",
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
 }
