build: change scripts for linting

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,5 +4,5 @@
     "selector-class-pattern": null,
     "property-no-vendor-prefix": null
   },
-  "ignoreFiles": ["**/*.ts", "**/*.tsx", ".**/*.cjs", "**/*.html"]
+  "ignoreFiles": ["**/*.ts", "**/*.tsx", ".**/*.cjs", "**/*.html", "**/*.md"]
 }
