--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "npx tsc && vite build",
     "preview": "vite preview",
+    "eslint": "npx eslint --ext .ts,.tsx ./",
+    "eslint-fix": "npx eslint --ext .ts,.tsx --fix ./",
+    "stylelint": "npx stylelint \"src/{**/*,*}.css\"",
+    "stylelint-fix": "npx stylelint \"src/{**/*,*}.css\" --fix",
+    "prettier": "npx prettier --check ./",
+    "prettier-fix": "npx prettier --write ./",
     "precommit": "lint-staged"
   },
   "dependencies": {
