--- a/.prettierrc
+++ b/.prettierrc
@@ -2,17 +2,9 @@
   "singleQuote": true,
   "printWidth": 120,
   "tabWidth": 2,
-  "semi": true,
-  "jsxBracketSameLine": false,
-  "parser": "typescript",
   "trailingComma": "es5",
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
-  "importOrder": [
-    "^react(.*)",
-    "<THIRD_PARTY_MODULES>",
-    "@/(.*)",
-    "^@(.*)",
-    "^[./ ]"],
+  "importOrder": ["^react(.*)", "<THIRD_PARTY_MODULES>", "@/(.*)", "^@(.*)", "^[./ ]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "overrides": [
