--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "singleQuote": true,
   "printWidth": 120,
   "tabWidth": 2,
+  "semi": true,
   "trailingComma": "es5",
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": ["^react(.*)", "<THIRD_PARTY_MODULES>", "@/(.*)", "^@(.*)", "^[./ ]"],
